# advent_of_code

./: .gitignore  Cargo.toml  README.md  readme.md
aoc_2015/: Cargo.toml  lib.rs
aoc_2016/: Cargo.toml  lib.rs
aoc_2017/: Cargo.toml
aoc_2018/: Cargo.toml  lib.rs
aoc_2018/src/: lib.rs
aoc_2019/: Cargo.toml  lib.rs
aoc_2020/: Cargo.toml  lib.rs
aoc_2021/: Cargo.toml  lib.rs
aoc_2022/: Cargo.toml  lib.rs
aoc_2023/: Cargo.toml  lib.rs
aoc_2024/: Cargo.toml  lib.rs
benches/: bench.rs
crates/aoc_2017/: Cargo.toml
crates/aoc_2018/: Cargo.toml  lib.rs
crates/aoc_2019/: lib.rs
crates/aoc_2020/: Cargo.toml  lib.rs
crates/aoc_2021/: Cargo.toml  lib.rs
input/2020/: day7.txt
shared/: Cargo.toml  lib.rs
src/: lib.rs  main.rs
template/: Cargo.toml
