[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Tae Hyon Whang <>"]
edition = "2018"

[lib]
name = "advent_of_code"
path = "src/lib.rs"
bench = false

[[bin]]
name = "advent_of_code"
path = "src/main.rs"
bench = false

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
