[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
aoc_2021 = { path = "crates/aoc_2021" }
aoc_2020 = { path = "crates/aoc_2020" }
aoc_2019 = { path = "crates/aoc_2019" }
aoc_2018 = { path = "crates/aoc_2018" }
aoc_2017 = { path = "crates/aoc_2017" }
aoc_2016 = { path = "crates/aoc_2016" }
aoc_2015 = { path = "crates/aoc_2015" }
